--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -37,15 +37,15 @@ jobs:
           push: true
           tags: naeramit/react-cicd:latest
 
-      # - name: Deploy to Cloud
-      #   uses: appleboy/ssh-action@master
-      #   with:
-      #     host: ${{ secrets.HOST }}
-      #     username: ${{ secrets.USERNAME }}
-      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
-      #     port: ${{ secrets.SSH_PORT }}
-      #     script: |
-      #       docker pull pavitpim40/react-ci:latest
-      #       docker stop react-ci
-      #       docker rm react-ci
-      #       docker run -d --name react-ci -p 80:80 pavitpim40/react-ci:latest
+      - name: Deploy to Cloud
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            docker pull pavitpim40/react-ci:latest
+            docker stop react-ci
+            docker rm react-ci
+            docker run -d --name react-ci -p 80:80 pavitpim40/react-ci:latest
