--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -45,7 +45,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            docker pull pavitpim40/react-ci:latest
-            docker stop react-ci
-            docker rm react-ci
-            docker run -d --name react-ci -p 80:80 pavitpim40/react-ci:latest
+            docker pull naeramit/react-cicd:latest
+            docker stop react-cicd
+            docker rm react-cicd
+            docker run -d --name react-cicd -p 80:80 naeramit/react-cicd:latest
